# python-project-50

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
gendiff/: __init__.py  diff_builder.py  differ.py  parsers.py
gendiff/formatters/: __init__.py  json.py  plain.py  stylish.py
gendiff/scripts/: gendiff.py
hexlet_code/: __init__.py  diff_builder.py  differ.py  parsers.py
hexlet_code/formatters/: __init__.py  plain.py  stylish.py
hexlet_code/scripts/: gendiff.py
tests/: test_gendiff.py
