# pyproject.toml
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hexlet-code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"

# Основные зависимости проекта
dependencies = [
    "PyYAML>=6.0",
]

# Опциональные зависимости для разработки
[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
]

[project.scripts]
# Точка входа для команды gendiff указывает на модуль внутри папки gendiff
gendiff = "gendiff.scripts.gendiff:main"

[project.urls]
Homepage = "https://github.com/Jevda/python-project-50"
Repository = "https://github.com/Jevda/python-project-50"

[tool.hatch.build.targets.wheel]
# Указываем, что для сборки нужно взять папку gendiff
packages = ["gendiff"]

# Настройки линтера Ruff
[tool.ruff]
line-length = 80
# target-version = "py312"

[tool.ruff.lint]
preview = true
select = ["E", "F", "I", "C90"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]